# arcflare

./: .env.example  .gitignore  .impeccable.md  README.md  docker-compose.yml  index.html  railway.toml
backend/: Dockerfile  pyproject.toml  railway.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_metadata_components_and_licensing.py  003_velocity_internal_external.py  004_velocity_classification.py  005_connection_platform_org_id.py  006_classification_velocity_analysis_config.py  007_process_discovery.py  008_classification_empty_to_deprecated.py  009_chat_assistant.py  010_prompt_store.py  011_chat_templates_seed.py  012_domain_map_positions.py  013_intelligence_pipeline.py  014_seed_pipeline_prompts.py  015_fix_domain_protocol_prompt.py  016_knowledge_layer.py  017_add_metadata_dependencies_table.py  018_add_sync_events_table.py  019_perf_vector_index_and_cache.py  020_community_summaries.py  021_evidence_sources.py  022_graph_community_vectorization_overhaul.py  023_document_simplification.py  024_org_research_profiles.py  025_recommendation_pipeline.py  026_wire_all_prompts_to_store.py  027_agent_opportunity_columns.py  028_users_org_scoped_clerk_ids.py  029_add_arc_score_to_recommendations.py  030_agent_generation_artifacts.py  031_agent_prompt_blocks.py  034_portfolio_candidate_prompts.py  (+2 more)
backend/app/: __init__.py  main.py
backend/scripts/: backfill_recommendation_bindings.py  backfill_recommendation_scores.py  capture_baseline.py  dspy_optimize.py  validate_performance.py
backend/tests/: conftest.py
(+382 files in other folders)
