[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arcflare-backend"
version = "0.1.0"
description = "Arcflare FastAPI backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
  "ruff>=0.6.0",
  "pytest>=8.0.0",
  "pytest-asyncio>=0.24.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [
  "app/services/salesforce/apex_parser/ApexLexer.py",
  "app/services/salesforce/apex_parser/ApexParser.py",
  "app/services/salesforce/apex_parser/ApexParserListener.py",
  "app/services/salesforce/apex_parser/ApexParserVisitor.py",
]
